--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;400;500;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100;200;500&display=swap');
 
 html, body{
     font-family: 'Montserrat', sans-serif;
@@ -204,6 +205,7 @@ strong {
     display: inline-block;
     width: 100%;
     margin: 0 0 0.5em 0;
+    padding: 0 0 0 2%;
 }
 
 .skill{
@@ -216,4 +218,32 @@ strong {
     margin-right: 0.5em;
     padding: 0.1em 0.5em 0.1em 0.5em;
     width: 5em;
+}
+
+#lang{
+    position: absolute;
+    top: 1%;
+    right: 1%;
+    color: #B0B0B2;
+    font-family: 'Noto+Sans+SC';
+    font-size: 1em;
+    font-weight: 200;
+    text-decoration: none;
+
+    transition: 0.3s;
+}
+
+#lang strong{
+    color: #F5F5F7;
+    font-weight: 500;
+
+    transition: 0.3s;
+}
+
+#lang:hover{
+    color: #f0993e;
+}
+
+#lang:hover strong{
+    color: #f0993e;
 }
